--- a/public/css/floating-labels.css
+++ b/public/css/floating-labels.css
@@ -20,18 +20,18 @@ body {
   margin: auto;
 } */
 
-.form-label-group {
+.floating div.form-label-group {
     position: relative;
     /* margin-bottom: 1rem; */
 }
 
-.form-label-group input,
-.form-label-group label {
+.floating div.form-label-group input,
+.floating div.form-label-group label {
     height: 3.125rem;
     padding: .75rem;
 }
 
-.form-label-group label {
+.floating div.form-label-group label {
     padding-left: 1.5rem;
 }
 
@@ -39,7 +39,7 @@ label:not(.form-check-label):not(.custom-file-label) {
     font-weight: normal;
 }
 
-.form-label-group label {
+.floating div.form-label-group label {
     position: absolute;
     top: 0;
     left: 0;
@@ -57,39 +57,39 @@ label:not(.form-check-label):not(.custom-file-label) {
     transition: all .1s ease-in-out;
 }
 
-.form-label-group input::-moz-placeholder {
+.floating div.form-label-group input::-moz-placeholder {
     color: transparent;
 }
 
-.form-label-group input::placeholder {
+.floating div.form-label-group input::placeholder {
     color: transparent;
 }
 
-.form-label-group input:not(:-moz-placeholder-shown) {
+.floating div.form-label-group input:not(:-moz-placeholder-shown) {
     padding-top: 1.25rem;
     padding-bottom: .25rem;
 }
 
-.form-label-group input:not(:placeholder-shown) {
+.floating div.form-label-group input:not(:placeholder-shown) {
     padding-top: 1.25rem;
     padding-bottom: .25rem;
 }
 
-.form-label-group input:not(:-moz-placeholder-shown)~label {
+.floating div.form-label-group input:not(:-moz-placeholder-shown)~label {
     padding-top: .25rem;
     padding-bottom: .25rem;
     font-size: 12px;
     color: #777;
 }
 
-.form-label-group input:not(:placeholder-shown)~label {
+.floating div.form-label-group input:not(:placeholder-shown)~label {
     padding-top: .25rem;
     padding-bottom: .25rem;
     font-size: 12px;
     color: #777;
 }
 
-.form-label-group input:-webkit-autofill~label {
+.floating div.form-label-group input:-webkit-autofill~label {
     padding-top: .25rem;
     padding-bottom: .25rem;
     font-size: 12px;
@@ -99,16 +99,16 @@ label:not(.form-check-label):not(.custom-file-label) {
 /* Fallback for Edge
 -------------------------------------------------- */
 @supports (-ms-ime-align: auto) {
-    .form-label-group {
+    .floating div.form-label-group {
         display: flex;
         flex-direction: column-reverse;
     }
 
-    .form-label-group label {
+    .floating div.form-label-group label {
         position: static;
     }
 
-    .form-label-group input::-ms-input-placeholder {
+    .floating div.form-label-group input::-ms-input-placeholder {
         color: #777;
     }
 }
